# f4kvs-ffi

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md
bench/embed_vs_sqlite/: f4kvs_batch_probe.go  go.mod  main.go  sqlite_fsync_probe.go
bench/ffi_read_tax/: go.mod  main.go
crates/f4kvs-core/: Cargo.toml  README.md
crates/f4kvs-core/src/: advanced_property_tests.rs  audit_logging.rs  auth.rs  batch_optimizer.rs  btreemap.rs  cache.rs  cache_efficient_allocator.rs  chaos_tests.rs  comprehensive_tests.rs  compression.rs  compression_impls.rs  compression_integration.rs  compression_traits.rs  config.rs  config_reloader.rs  config_validator.rs  encryption.rs  engine.rs  engine_utils.rs  enhanced_config.rs  env_config.rs  error.rs  error_boundary.rs  hashmap.rs  hazard_pointers.rs  lib.rs  lockfree.rs  lockfree_cache.rs  lockfree_hashmap.rs  lockfree_utils.rs  memory_leak_detection.rs  memory_pool.rs  memory_pressure_manager.rs  memory_storage.rs  memory_storage_tests.rs  metrics.rs  monitoring_hooks.rs  optimized_engine.rs  optimized_memory_storage.rs  property_tests.rs  (+15 more)
crates/f4kvs-core/src/database/: config.rs  metadata.rs  mod.rs  registry.rs
crates/f4kvs-core/tests/: advanced_features_tests.rs  auth_comprehensive_tests.rs  batch_operation_failures_test.rs  batch_operations_comprehensive_tests.rs  btreemap_comprehensive_tests.rs  cache_comprehensive_tests.rs  concurrency_tests.rs  config_comprehensive_tests.rs  configuration_tests.rs  cpu_performance_tests.rs  diagnose_f4kvs_hang.rs  edge_case_tests.rs  encryption_comprehensive_tests.rs  end_to_end_tests.rs  engine_comprehensive_tests.rs  enhanced_config_comprehensive_tests.rs  error_handling_tests.rs  ffi_integration_tests.rs  hashmap_comprehensive_tests.rs  hazard_pointers_coverage_tests.rs  hazard_pointers_tests.rs  integration_tests.rs  io_pattern_tests.rs  lockfree_aba_prevention_tests.rs  lockfree_basic_tests.rs  lockfree_cache_tests.rs  lockfree_comprehensive_tests.rs  lockfree_coverage_tests.rs  lockfree_extended_coverage_tests.rs  lockfree_hashmap_coverage_tests.rs  lockfree_hashmap_tests.rs  lockfree_integration_tests.rs  long_running_tests.rs  memory_pool_comprehensive_tests.rs  memory_pool_coverage_tests.rs  memory_pool_integration_tests.rs  memory_pool_leak_detection_edge_cases.rs  memory_pressure_tests.rs  memory_safety_tests.rs  memory_storage_comprehensive_tests.rs  (+22 more)
crates/f4kvs-core/tests/user_stories/: basic_operations.rs  batch_operations.rs  concurrent_access.rs  error_handling.rs  performance.rs  scan_operations.rs
crates/f4kvs-ffi/: Cargo.toml  README.md
crates/f4kvs-ffi/examples/: read_tax.rs
crates/f4kvs-ffi/include/: f4kvs.h
crates/f4kvs-ffi/src/: lib.rs
crates/f4kvs-ffi/tests/: c_interop.rs  data_type_conversion.rs  deadlock_repro.rs  edge_cases.rs  error_handling.rs  ffi_boundary.rs  input_validation.rs  integration.rs  lexical_key_patterns.rs  lib.rs  thread_safety.rs
crates/f4kvs-ffi/tests/common/: mod.rs
crates/f4kvs-storage-core/: Cargo.toml  README.md
crates/f4kvs-storage-core/src/: adapter.rs  lib.rs
crates/f4kvs-storage-lsm/: Cargo.toml  README.md
crates/f4kvs-storage-lsm/src/: error.rs  lib.rs
crates/f4kvs-storage-lsm/src/compaction/: manager.rs
crates/f4kvs-storage-lsm/src/core/: engine.rs
crates/f4kvs-storage-lsm/src/storage/: memtable.rs  sstable.rs  wal.rs
crates/f4kvs-storage-lsm/src/tests/: wal_comprehensive_tests.rs  wal_durability_tests.rs
go/: errors.go  f4kvs.go  f4kvs_nocgo.go  go.mod  smoke_test.go  transaction.go
scripts/: bench_embed_vs_sqlite.sh  bench_ffi_read_tax.sh
